# Social-Media-Data-Analysis

./: .gitignore  README.md  prompt.txt  pyproject.toml
data/: backup_data.json  backup_final_data.json  classified_data.json  data.json  relations.json
notebooks/: Llama2_7B_Sample_Code.ipynb  data_crawling_pratice.ipynb  influential-node.ipynb  network-analysis.ipynb  network_data_visualization.ipynb  sentiment_classification_LLM.ipynb
src/: config.py  data_crawling.py  network_data_visualization.py  sentiment_classification_LLM.py  utils.py
